# rbg-planner

./: .gitignore  Dockerfile  LICENSE  Makefile  NOTICE  README.md  go.mod  go.sum
.github/workflows/: docker-build-push.yml
api/v1alpha1/: groupversion_info.go  roleautoscaler_types.go  zz_generated.deepcopy.go
charts/rbg-planner/: Chart.yaml  values.yaml
cmd/: main.go
config/crd/: inference-extension.rolebasedgroup.io_autoscalers.yaml  rolebasedgroup.inference-extension.io_roleautoscalers.yaml
config/rbac/: role.yaml
config/samples/: roleautoscaler_full.yaml
demo/: 00-rbg.yaml  01-router-rbac.yaml  02-autoscaler.yaml  03-traffic-simulator.yaml  04-grafana-portforward.sh  05-prometheus-grafana.yaml  06-grafana-dashboard.yaml  06-profiler-job.yaml  07-model-download.yaml  README.md  subtitles.md
demo/scripts/: run_profiling.py
deploy/: grafana-planner-dashboard.yaml
docs/: architecture.mmd  blog.md  lifecycle.mmd  planner-loop.mmd  sop.md
python/planner/: pyproject.toml  requirements.txt
python/planner/rbg_planner/: __init__.py  config.py  main.py  planner.py  planner_connector.py  prometheus_client.py  rbg_connector.py
python/planner/rbg_planner/metrics/: __init__.py  base.py  dynamo.py  patio.py  prometheus.py  sglang.py  vllm.py
python/planner/rbg_planner/utils/: load_predictor.py  perf_interpolation.py
python/planner/tests/: test_prometheus_client.py
python/profiler/: Dockerfile  pyproject.toml
python/profiler/rbg_profiler/: main.py  profiler.py
rbg_planner/: config.py  planner.py  prometheus_client.py  rbg_connector.py
tests/: test_planner.py  test_prometheus_client.py  test_rbg_connector.py
(+8 files in other folders)
