[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rbg-planner"
version = "0.1.0"
description = "Standalone SLA-based autoscaler for RoleBasedGroup Prefill/Decode workloads"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "kubernetes>=28.0.0",
    "prometheus-api-client>=0.5.0",
    "prometheus-client>=0.19.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pmdarima>=2.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
prophet = ["prophet>=1.1.0", "pandas>=2.0.0"]
dev = ["pytest>=7.0.0", "pytest-asyncio>=0.21.0", "pytest-mock>=3.10.0"]

[project.scripts]
rbg-planner = "rbg_planner.main:main"

[tool.setuptools.packages.find]
include = ["rbg_planner*"]
