[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "rbg-profiler"
version = "0.1.0"
description = "SLA profiling tool for RBG inference workloads"
requires-python = ">=3.10"
dependencies = [
    "kubernetes>=28.1.0",
]

[project.scripts]
rbg-profiler = "rbg_profiler.main:main"
